syntax = "proto3";

option go_package = "github.com/ecnuvj/vhoj_user/pkg/sdk/userpb";

package sdk;

message Role {
    uint64 role_id = 1;
    string role_name = 2;
}